--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 MySQL Basics. All rights reserved.</p>
+        <p>Designed by Anurag</p>
+        <p>&copy; 2024 Anurag. All rights reserved.</p>
     </footer>
 </body>
 </html>
-
